log
Wed 03 May 2023 03:25:32 PM UTC: 
 tests:  0|5
total_score: 0/70
a738b4b
Wed 03 May 2023 11:01:07 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:13: error: unused variable ‘adj_n’ [-Werror=unused-variable]
   57 |       Node* adj_n = createNode();
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
9cb305c
Wed 03 May 2023 11:02:26 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
34ce51c
Wed 03 May 2023 11:03:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e5a74b7
Wed 03 May 2023 11:14:59 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
e5a74b7
Wed 03 May 2023 11:15:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
dddcacb
Wed 03 May 2023 11:15:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2fbeec8
Wed 03 May 2023 11:17:59 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
94cbe10
Wed 03 May 2023 11:44:19 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
3ebec5a
Wed 03 May 2023 11:45:13 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
27f1e09
